Fix header color on mobile

--- a/stylesheets/components/irma-form.scss
+++ b/stylesheets/components/irma-form.scss
@@ -78,7 +78,7 @@
       @include font($size: 20px, $weight: 300, $color: $header-text-color);
 
       @include on-small-screen {
-        @include font($size: 16px);
+        @include font($size: 16px, $color: $header-text-color);
       }
 
       i.irma-web-logo {
